# trend-monitor

./: .gitignore  CLAUDE.md  env.json  pyproject.toml  samconfig.toml  template.yaml
.tmp/sam-cli-home/: metadata.json
docs/: 01KK926N6HN9BVXPJ8XVKYY5B7.json  FactChecker詳細設計書.md  FactCollector外部API仕様書.md  FactCollector設計書.md  RoadwayCollector設計書.md  SUPPLY_CHAIN_MASTER_DATA_DESIGN.md  env.json  設計書.md
function/category_classifier/: category_classifier_function.py
function/classification_processor/: classification_processor_function.py
function/fact_checker/: fact_checker_function.py
function/jma_collector/: jma_collector_function.py
function/keyword_search/: keyword_search_function.py
function/master_seed/: handler.py  seed_data.py
function/news_collector/: news_collector_function.py
function/node_index_generator/: node_index_generator_function.py
function/official_collector/: official_collector_function.py
function/roadway_collector/: roadway_collector_function.py
function/roadway_fact_checker/: roadway_fact_checker_function.py
function/trend_fetcher/: handler.py  requirements.txt  trend_fetcher_function.py
function/trend_fetcher/common/: __init__.py  utils.py
layers/common/: aws_utils.py  event_utils.py  fact_matcher.py  log_utils.py  requirements.txt  utils.py
scripts/: clear_table.py  create_master_table.py  generate_infra_keywords.py  seed_keyword_master.py  seed_official_account_master.py  seed_supply_chain_master_data.py
tests/: test_build_query.py  test_classification_processor.py
