[project]
name = "trend-monitor"
version = "0.1.0"
description = "SCMリスク監視システム - X APIトレンド・キーワード検索によるサプライチェーンリスク早期検知"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[all]>=3.25.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.63",
    "botocore[crt]>=1.42.63",
    "pydantic>=2.0",
    "python-ulid>=3.0.0",
    "xdk>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "boto3-stubs[dynamodb,s3,secretsmanager,bedrock-runtime]>=1.42.63",
    "moto[dynamodb,s3,secretsmanager]>=5.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["layers/common", "function/trend_fetcher", "function/keyword_search"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["utils", "aws_utils", "log_utils"]
